--- a/index.htm
+++ b/index.htm
@@ -170,19 +170,12 @@
     <h2>Latest Articles</h2>
     <div class="articles">
       <div class="article-card">
-        <strong>Coming soon:</strong> My first article on "How Generative AI is Transforming Business Operations"
-      </div>
-      <div class="article-card">
-        <strong>Coming soon:</strong> "Agentic AI: The Next Leap in Autonomous Systems"
-      </div>
-      <div class="article-card">
-        <strong>Coming soon:</strong> "Optimization in the Age of AI: Modern Operations Research"
-      </div>
+        <strong>Coming soon:</strong> Agentic AI 
     </div>
     <h2>Contact</h2>
     <div class="contact">
       <a href="https://www.linkedin.com/in/venkataramana/" target="_blank">LinkedIn</a>
-      <a href="mailto:your.email@example.com">Email</a>
+      <a href="mailto:dr.ramana@outlook.com">Email</a>
     </div>
   </div>
 </body>
