--- a/index.htm
+++ b/index.htm
@@ -132,7 +132,7 @@
     </div>
     <div class="highlights">
       <div class="highlight-card">
-        <strong>10+ years</strong><br>in analytics & AI
+        <strong>19+ years</strong><br>in analytics & AI
       </div>
       <div class="highlight-card">
         <strong>PhD</strong><br>in Operations Research
@@ -170,7 +170,7 @@
     <h2>Latest Articles</h2>
     <div class="articles">
       <div class="article-card">
-        <strong>Coming soon:</strong> Agentic AI 
+        <strong>Coming soon:</strong> Application of Eigen Values in Data Science
     </div>
     <h2>Contact</h2>
     <div class="contact">
