Update title and content for AI focus

--- a/index.htm
+++ b/index.htm
@@ -1,11 +1,23 @@
-<!-- index.htm -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Venkataramana | AI, OR & Data Science</title>
+  <title>Venkataramana | Advanced AI & Decision Intelligence</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FDD57R66C5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FDD57R66C5');
+</script>
+  
+
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
+
   <style>
     body {
       font-family: 'Montserrat', Arial, sans-serif;
@@ -53,6 +65,7 @@
       font-size: 1.15em;
       margin: 1em 0 2em 0;
       color: #444;
+      line-height: 1.6;
     }
     .highlights {
       display: flex;
@@ -120,63 +133,85 @@
     }
   </style>
 </head>
+
 <body>
+
   <div class="hero">
     <img src="https://avatars.githubusercontent.com/u/1027276?v=4" alt="Venkataramana" class="profile-img">
     <h1>Venkataramana</h1>
-    <div>AI, Operations Research & Data Science Enthusiast</div>
+    <div>Advanced AI, Decision Intelligence & Machine Learning Systems</div>
   </div>
+
   <div class="container">
+
     <div class="bio">
-      Welcome! I'm a technology leader passionate about building intelligent systems that solve real-world problems. With expertise in data science, operations research, and artificial intelligence, I enjoy exploring the frontiers of Gen AI and agentic systems. My journey spans research, product development, and mentoring teams to deliver impactful solutions.
+      I design and build <strong>production‑grade AI and decision intelligence systems</strong> that operate reliably in real‑world environments.
+      My work spans advanced machine learning, operations research, and modern AI architectures—including generative and agent‑based systems—
+      with a strong emphasis on scalability, explainability, and governance.
+      <br><br>
+      Over the past two decades, I have led analytics and AI initiatives across research and industry, translating complex analytical ideas
+      into systems that support high‑stakes decisions.
     </div>
+
     <div class="highlights">
       <div class="highlight-card">
-        <strong>19+ years</strong><br>in analytics & AI
+        <strong>19+ years</strong><br>AI & analytics leadership
       </div>
       <div class="highlight-card">
-        <strong>PhD</strong><br>in Operations Research
+        <strong>PhD</strong><br>Operations Research
       </div>
       <div class="highlight-card">
-        <strong>Speaker</strong><br>at AI & Data Science events
+        <strong>Enterprise AI</strong><br>Production & governance
       </div>
       <div class="highlight-card">
-        <strong>Mentor</strong><br>for aspiring data scientists
+        <strong>Mentorship</strong><br>Teams & practitioners
       </div>
     </div>
-    <h2>Featured Topics</h2>
+
+    <h2>Core Focus Areas</h2>
+
     <div class="topics">
       <div class="topic-card">
         <div class="topic-icon">🤖</div>
         <strong>Generative AI</strong>
-        <p>Exploring creative AI models, LLMs, and their applications in content, code, and design.</p>
+        <p>Enterprise‑safe LLM applications, retrieval‑augmented systems, and AI copilots designed for reliability and control.</p>
       </div>
+
       <div class="topic-card">
-        <div class="topic-icon">🧑‍💻</div>
+        <div class="topic-icon">🧠</div>
         <strong>Agentic AI</strong>
-        <p>Building autonomous agents that plan, reason, and act in complex environments.</p>
+        <p>Autonomous and semi‑autonomous agents that reason, plan, and act across multi‑step decision workflows.</p>
       </div>
+
       <div class="topic-card">
         <div class="topic-icon">📈</div>
-        <strong>Operations Research</strong>
-        <p>Solving optimization and decision-making problems using mathematical models.</p>
+        <strong>Decision Science</strong>
+        <p>Optimization, forecasting, and decision modeling that connect predictions to real operational actions.</p>
       </div>
+
       <div class="topic-card">
         <div class="topic-icon">📊</div>
-        <strong>Data Science</strong>
-        <p>From data wrangling to predictive analytics and actionable insights.</p>
+        <strong>Machine Learning Systems</strong>
+        <p>End‑to‑end ML pipelines with validation, monitoring, and governance built in from day one.</p>
       </div>
     </div>
-    <h2>Latest Articles</h2>
+
+    <h2>Writing & Research</h2>
+
     <div class="articles">
       <div class="article-card">
-        <strong>Coming soon:</strong> Application of Eigen Values in Data Science
+        <strong>Upcoming:</strong> Eigenvalues and their role in modern data science and machine learning
+      </div>
     </div>
-    <h2>Contact</h2>
+
+    <h2>Connect</h2>
+
     <div class="contact">
       <a href="https://www.linkedin.com/in/venkataramana/" target="_blank">LinkedIn</a>
       <a href="mailto:dr.ramana@outlook.com">Email</a>
     </div>
+
   </div>
+
 </body>
 </html>
