--- a/index.htm
+++ b/index.htm
@@ -22,7 +22,7 @@
       margin: 0;
       background: #f4f7fa;
       color: #222;
-      line-height: 1.6;
+      line-height: 1.65;
     }
 
     /* NAV */
@@ -30,8 +30,8 @@
       position: sticky;
       top: 0;
       background: #ffffff;
-      padding: 0.8em 2em;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+      padding: 0.9em 2em;
+      box-shadow: 0 2px 12px rgba(0,0,0,0.06);
       z-index: 10;
       display: flex;
       justify-content: space-between;
@@ -48,43 +48,43 @@
     .hero {
       background: linear-gradient(120deg, #0077b5 60%, #6dd5ed 100%);
       color: #fff;
-      padding: 4em 1em 3em;
+      padding: 4.5em 1em 3.5em;
       text-align: center;
     }
     .profile-img {
-      width: 130px;
-      height: 130px;
+      width: 135px;
+      height: 135px;
       border-radius: 50%;
       border: 4px solid #fff;
       margin-bottom: 1em;
     }
     .hero h1 {
-      font-size: 2.8em;
-      margin-bottom: 0.2em;
+      font-size: 2.9em;
+      margin-bottom: 0.3em;
     }
     .hero p {
-      font-size: 1.2em;
-      max-width: 700px;
+      font-size: 1.25em;
+      max-width: 760px;
       margin: auto;
     }
 
     /* CONTAINER */
     .container {
-      max-width: 1000px;
-      margin: -70px auto 0;
+      max-width: 1050px;
+      margin: -80px auto 0;
       background: #fff;
-      padding: 3em;
-      border-radius: 14px;
-      box-shadow: 0 10px 40px rgba(0,0,0,0.08);
+      padding: 3.2em;
+      border-radius: 16px;
+      box-shadow: 0 12px 45px rgba(0,0,0,0.08);
     }
 
     h2 {
       color: #0077b5;
-      margin-top: 2.5em;
+      margin-top: 2.8em;
       margin-bottom: 0.8em;
     }
 
-    .section-divider {
+    .divider {
       height: 1px;
       background: #e0e7ef;
       margin: 3em 0;
@@ -94,29 +94,29 @@
     .highlights {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 1.5em;
+      gap: 1.6em;
     }
     .highlight-card {
       background: #f4f7fa;
-      padding: 1.5em;
-      border-radius: 10px;
+      padding: 1.6em;
+      border-radius: 12px;
       text-align: center;
       transition: transform 0.2s;
     }
     .highlight-card:hover {
-      transform: translateY(-5px);
+      transform: translateY(-6px);
     }
 
     /* TOPICS */
     .topics {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-      gap: 1.5em;
+      gap: 1.6em;
     }
     .topic-card {
       background: #eaf6fb;
-      padding: 1.8em;
-      border-radius: 12px;
+      padding: 2em;
+      border-radius: 14px;
       transition: transform 0.2s;
     }
     .topic-card:hover {
@@ -126,7 +126,93 @@
     /* CTA */
     .cta {
       text-align: center;
-      margin-top: 3em;
+      margin-top: 3.5em;
     }
     .cta a {
-      background
+      background: #0077b5;
+      color: #fff;
+      padding: 1em 2em;
+      border-radius: 30px;
+      text-decoration: none;
+      font-weight: 600;
+      margin: 0 0.6em;
+      display: inline-block;
+    }
+
+    footer {
+      text-align: center;
+      padding: 2.5em;
+      color: #666;
+      font-size: 0.9em;
+    }
+
+    @media (max-width: 700px) {
+      .container { padding: 2em 1.2em; }
+    }
+  </style>
+</head>
+
+<body>
+
+<nav>
+  <strong>Venkataramana</strong>
+  <div>
+    <a href="#focus">Focus</a>
+    <a href="#approach">Approach</a>
+    <a href="#connect">Connect</a>
+  </div>
+</nav>
+
+<section class="hero">
+  <img src="https://avatars.githubusercontent.com/u/1027276?v=4" class="profile-img">
+  <h1>Advanced AI & Decision Intelligence</h1>
+  <p>Designing production‑grade AI systems that power high‑stakes decisions in enterprise environments.</p>
+</section>
+
+<section class="container">
+
+  <p>
+    I design and lead the development of <strong>scalable, explainable, and governance‑ready AI systems</strong>.
+    My work bridges machine learning, operations research, and modern AI architectures—including generative and agent‑based systems—
+    with a strong emphasis on real‑world reliability.
+  </p>
+
+  <div class="divider"></div>
+
+  <div class="highlights">
+    <div class="highlight-card"><strong>19+ Years</strong><br>AI & Analytics Leadership</div>
+    <div class="highlight-card"><strong>PhD</strong><br>Operations Research</div>
+    <div class="highlight-card"><strong>Enterprise AI</strong><br>Production & Governance</div>
+    <div class="highlight-card"><strong>Mentorship</strong><br>Teams & Leaders</div>
+  </div>
+
+  <h2 id="focus">Core Focus Areas</h2>
+
+  <div class="topics">
+    <div class="topic-card"><strong>Generative AI</strong><br>LLM systems, RAG architectures, enterprise copilots</div>
+    <div class="topic-card"><strong>Agentic AI</strong><br>Autonomous reasoning and multi‑step decision agents</div>
+    <div class="topic-card"><strong>Decision Science</strong><br>Optimization, forecasting, policy modeling</div>
+    <div class="topic-card"><strong>ML Systems</strong><br>End‑to‑end pipelines with monitoring & governance</div>
+  </div>
+
+  <h2 id="approach">How I Work</h2>
+  <ul>
+    <li>Decision‑first problem framing</li>
+    <li>Engineering‑grade model development</li>
+    <li>Governance and explainability by design</li>
+    <li>Clear communication for executives and regulators</li>
+  </ul>
+
+  <div class="cta" id="connect">
+    <a href="https://www.linkedin.com/in/venkataramana/" target="_blank">LinkedIn</a>
+    <a href="mailto:dr.ramana@outlook.com">Contact</a>
+  </div>
+
+</section>
+
+<footer>
+  © Venkataramana • Advanced AI & Decision Intelligence
+</footer>
+
+</body>
+</html>
